# filec

./: Cargo.toml  README.md
src/: app.rs  buffer.rs  cli.rs  clipboard.rs  main.rs
