[package]
name = "filec"
version = "0.1.0"
description = "Simple CLI file clipboard"
readme = "README.md"
authors = [ "lowerc4s3 <kkirill03@gmail.com>" ]
edition = "2024"
repository = "https://github.com/lowerc4s3/filec"
license = "MIT"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
fs4 = { version = "0.13.1", features = ["sync"] }
